--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
  <h1><b>"o flamenguinho perdeu"</h1></b>   
  <h2>PENSAMENTO COMPUTADOR</h2>
  <I>PROF MID </I>
-
+<img id="imagem principal" src="maria1.jpeg"
 </body>
 </html>
